<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="search_hint">Search...</string>
    <string name="no_result_found">Results not found</string>
    <string name="select_country">Select a country</string>
    <string name="app_name">BSKL</string>
    <string name="common_error_loading_pdf">Failed to load the pdf. Please try again later.</string>
    <string name="common_error_loading_link">Failed to load the link. Please try again later.</string>
    <string name="common_error_loading_page">Failed to load. Please try again later.</string>
    <string name="internet_error">Cannot continue at this time. Please check your internet connectivity.</string>
    <string name="mandatory_field">Mandatory field</string>
    <string name="no_internet">Please check your internet connectivity</string>
    <string name="only_primary">Secondary timetable is not currently operational</string>
    <string name="only_secondary">Primary timetable is not currently operational</string>
    <string name="both_secondary_primary">This Feature is only available for Both Secodary and Primary Students</string>
    <string name="common_error">Cannot continue. Please try again later</string>
    <string name="error_heading">Alert</string>
    <string name="username">USER EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="loading">Loading&#8230;</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="enter_current_password">Please enter Current Password</string>
    <string name="enter_new_password">Please enter New Password</string>
    <string name="enter_confirm_password">Please enter Confirm Password</string>
    <string name="succ_pswd">Password successfully changed</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="some_error">Some Error Occured</string>
    <string name="play">PLAY</string>
    <string name="no_calendar_data">Currently you  have no events in this month.</string>
    <string name="pause">PAUSE</string>
    <string name="drag_duplicate">Item already present in home page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="otp_error">Invalid verification code. Please enter the correct verification code and proceed.</string>
    <string name="sign_up_successfull">Your password has been sent to the registered email address </string>
    <string name="sign_up_successfull_last">You can use your  registered email address and password to login </string>
    <string name="action_settings">Settings</string>
    <string name="null_value"></string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="exit_alert">Do you wish to exit?</string>
    <string name="drag_impossible">Drag and drop is not possible for this section</string>
    <string name="alert_heading">Alert</string>
    <string name="enter_email">Please enter Email</string>
    <string name="enter_valid_email">Please enter a valid Email</string>
    <string name="enter_password">Please enter Password</string>
    <string name="invalid_email">The email submitted "</string>
    <string name="invalid_email_normal">Incorrect email.Please try again  "</string>
    <string name="invalid_email_end">"is not registered with the school"</string>
    <string name="invalid_otp">Invalid otp</string>
    <string name="already_exist">You\'ve already registered with this email id. Please login to continue.</string>
    <string name="not_available_child">This feature is not available for this student. Please contact BSKL for further details.</string>
    <string name="not_available_feature">Feature is not currently operational</string>
    <string name="not_available_limitted_access">Your account does not have the correct permission to view this feature</string>
    <string name="signup_success_alert">Successfully registered.Please check your Email for further details.</string>
    <string name="missing_parameter">Missing parameter</string>
    <string name="missing_phoneno">No Mobile phone registered. Please contact Admin</string>
    <string name="email_exists">Email already exists.</string>
    <string name="email_already_reg_login">Email already registered.</string>
    <string name="login_success_alert">Successfully logged in.</string>
    <string name="incrct_usernamepswd">Incorrect username or password.</string>
    <string name="incrct_pswd">Incorrect password. Please try again.</string>
    <string name="frgot_success_alert">Password is successfully sent to your email.Please check.</string>
    <string name="enter_valid_otp">Please enter the otp correctly</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_phone_no">Enter PhoneNumber</string>
    <string name="not_active">You are not registered with this email Id. Please go to \'BSKL Parent Sign Up\' and register with your email id before logging in</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="update_success">Thank you for the Update, the school will be in touch when the changes have been made</string>
    <string name="not_available">Feature is not available as you have no students enrolled.</string>
    <string name="student_not_available">No Student Data Available.</string>
    <string name="enter_startdate">Please select First day of absence</string>
    <string name="enter_enddate">Please select Return to school</string>
    <string name="enter_reason">Please enter reason for your absence</string>
    <string name="succ_add_student">Successfully added your child</string>
    <string name="student_exists">Student already exists</string>
    <string name="succ_leave_submission">Successfully submitted your leave request.</string>
    <string name="requestHint">If you need to cancel a registered absence please contact reception (phone or email).</string>
    <string name="appregisteredHint">App Registered Absences</string>
    <string name="regNewAbsence">Register New Absence</string>
    <string name="submit">SUBMIT</string>
    <string name="internal_server_error">Internal server error</string>
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="Rejected">Approved</string>
    <string-array name="home_list_content_items">

        
        <item>Home</item>
        
        <item>Calendar</item>
        
        <item>Messages</item>
        
        <item>BSKL News</item>
        
        <item>Social Media</item>
        
        <item>Reports</item>
        

        
        <item>Report Absence</item>
        <item>Safeguarding</item>

        <item>Attendance</item>

        
        
        
        <item>Timetable</item>
        
        <item>Contact us</item>
        
        


    </string-array>
    <string-array name="home_list_reg_icons">

        <item>@drawable/home_side</item>
        <item>@drawable/calendar_side</item>
        <item>@drawable/messages_side</item>
        <item>@drawable/news_side</item>
        <item>@drawable/social_media_side</item>
        <item>@drawable/report_side</item>
        <item>@drawable/absence</item>
        <item>@drawable/safe_guarding</item>
        <item>@drawable/attendance_side</item>

        
        <item>@drawable/time_table_side</item>
        <item>@drawable/contacts</item>
        


    </string-array>
    <string-array name="array_spinner">
        <item>Year View</item>
        <item>Month View</item>
        <item>Week View</item>
    </string-array>
    <string name="title_activity_second">Second Activity</string>
    <string name="toast_track_exception">Exception is recorded. Check the Crashes and Exceptions on Google Dashboard!</string>
    <string name="toast_app_crash">The app will crash now! Check the Crashes and Exceptions on Google Dashboard!</string>
    <string name="fragment_footer">Fragment is loaded! Check the screen view on Google Analytics Dashboard.</string>
    <string name="msg_instructions">Click on each button to see the appropriate tracking on Google Analytics</string>
    <string name="btn_second_screen">Second Screen</string>
    <string name="btn_send_event">Track Event</string>
    <string name="btn_exception_tracking">Track Exception</string>
    <string name="btn_app_crash">Track App Crash</string>
    <string name="btn_load_fragment">Fragment Tracking</string>
    <string name="new_version_available">New Version Available</string>
    <string name="force_update">There is a newer version available for download! Please update the app by visiting the Google Play Store.</string>
    <string name="data_collection_kin_details">Next of Kin Details</string>
    <string name="data_collection_address_postel_code">Post Code</string>
    <string name="data_collection_address_country">Country</string>
    <string name="data_collection_address_state">State</string>
    <string name="data_collection_address_town">Town</string>
    <string name="data_collection_address_Line3">Address Line 3</string>
    <string name="data_collection_address_Line2">Address Line 2</string>
    <string name="data_collection_address_Line1">Address Line 1</string>
    <string name="data_collection_home_address">Home Address</string>
    <string name="data_collection_own_contact_no_hint">Contact Number</string>
    <string name="data_collection_own_contact_email_hint">Email</string>
    <string name="data_collection_details">Please provide the details below</string>
    <string name="data_collection">In the event of an emergency and the primary caregivers not being available we may need to contact your child\'s next of Kin.</string>
    <string name="title_activity_kin_details">KinDetails</string>
    <string name="hello_world">Hello world!</string>
    <string name="full_name">Full Name</string>
    <string name="email">E - Mail</string>
    <string name="contactnumber">Contact Number</string>
    <string name="data_collection_emergency">Emergency Contacts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kin_title_hint">(Next of Kin Contact must not be the parent/guardian)</string>
    <string name="local_emergency_title_hint">(Emergency Contact must not be the parent/guardian)</string>
    <string name="empty_text">Please add one contact as a minimum</string>
    <string name="pleasewait">Please wait...</string>
    <string name="own_details_confirm_first_name">First name</string>
    <string name="own_details_confirm_last_name">Last name</string>
    <string name="own_details_confirm_email_id">Email-ID</string>
    <string name="passport_select_student">Select Student</string>
    <string name="insurance_details">Health Details</string>
    <string name="medical_insurance">Medical Insurance</string>
    <string name="no_medical_insurance">Do not have medical insurance</string>
    <string name="medical_insurance_policy_number">Medical Insurance Policy Number</string>
    <string name="medical_insurance_member_number">Medical Insurance Member Number</string>
    <string name="medical_insurance_provider">Medical Insurance Provider</string>
    <string name="medical_insurance_expiry_date">Medical Insurance Expiry Date</string>
    <string name="personal_accident_insurance">Personal Accident Insurance</string>
    <string name="no_personal_accident_insurance">Do not have Personal Accident Insurance</string>
    <string name="personal_medical_insurance_policy_number">Personal Accident insurance Policy Number</string>
    <string name="personal_medical_insurance_provider">Personal Accident insurance Provider</string>
    <string name="personal_medical_insurance_expiry_date">Personal Accident insurance Expiry Date</string>
    <string name="preferred_hospital">Preferred Hospital</string>
</resources>