<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/closeImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <com.mobatia.bskl.manager.TextViewFontSansProBold
        android:id="@+id/insuranceDetailHeadTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insurance_details"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/closeImg"/>
    <com.mobatia.bskl.manager.TextViewFontSansProRegular
        android:id="@+id/selectStudentTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/passport_select_student"
        android:layout_below="@id/insuranceDetailHeadTxt"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:id="@+id/studentSpinner"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/event_spinnerbg"
        android:gravity="center"
        android:layout_below="@+id/selectStudentTxt"
        android:orientation="horizontal"
        android:weightSum="100">

        <com.github.siyamed.shapeimageview.CircularImageView
            android:id="@+id/imagicon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/boy"
            app:siBorderColor="#A0DAE5"
            app:siBorderWidth="1dp" />

        <com.mobatia.bskl.manager.TextViewFontSansProRegularColorBlack
            android:id="@+id/studentName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:text="Select a child"
            android:textSize="16sp" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="right|center"
            android:layout_weight="12"
            android:src="@drawable/arrowdownnew"
            android:visibility="visible" />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/studentSpinner"
        android:layout_above="@+id/submitBtnasdas"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.mobatia.bskl.manager.TextViewFontSansProBold
                android:id="@+id/medicalInsuranceTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medical_insurance"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/checknoMedicalInsuranceImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/uncheck" />
                <com.mobatia.bskl.manager.TextViewFontSansProRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/no_medical_insurance"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>
            <com.mobatia.bskl.manager.EditTextFontSansProRegular
                android:id="@+id/insurancePolicyNumberTxt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rect_background_grey"
                android:hint="@string/medical_insurance_policy_number"
                android:padding="5dp"
                android:textSize="16sp"
                android:layout_margin="10dp"/>
            <com.mobatia.bskl.manager.EditTextFontSansProRegular
                android:id="@+id/insuranceMemberNumberTxt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rect_background_grey"
                android:hint="@string/medical_insurance_member_number"
                android:padding="5dp"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
            <com.mobatia.bskl.manager.EditTextFontSansProRegular
                android:id="@+id/insuranceProviderTxt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rect_background_grey"
                android:hint="@string/medical_insurance_provider"
                android:padding="5dp"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                />
            <com.mobatia.bskl.manager.EditTextFontSansProRegular
                android:id="@+id/insuranceExpiryDate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rect_background_grey"
                android:hint="@string/medical_insurance_expiry_date"
                android:padding="5dp"
                android:textSize="16sp"
                android:clickable="true"
                android:editable="false"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:focusable="true" />
            <com.mobatia.bskl.manager.TextViewFontSansProBold
                android:id="@+id/personalInsuranceTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_accident_insurance"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="center">
                <ImageView
                    android:id="@+id/checkpersonalInsuranceImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/uncheck"/>
                <com.mobatia.bskl.manager.TextViewFontSansProRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/no_personal_accident_insurance"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>
            <com.mobatia.bskl.manager.EditTextFontSansProRegular
                android:id="@+id/personalInsuranceNumberTxt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rect_background_grey"
                android:hint="@string/personal_medical_insurance_policy_number"
                android:padding="5dp"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
            <com.mobatia.bskl.manager.EditTextFontSansProRegular
                android:id="@+id/personalInsuranceProviderTxt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rect_background_grey"
                android:hint="@string/personal_medical_insurance_provider"
                android:padding="5dp"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                />
            <com.mobatia.bskl.manager.EditTextFontSansProRegular
                android:id="@+id/personalInsuranceExpiryDateTxt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rect_background_grey"
                android:hint="@string/personal_medical_insurance_expiry_date"
                android:padding="5dp"
                android:textSize="16sp"
                android:clickable="true"
                android:editable="false"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:focusable="true" />
            <com.mobatia.bskl.manager.TextViewFontSansProBold
                android:id="@+id/preferredHsptlHeadTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preferred_hospital"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>
            <com.mobatia.bskl.manager.EditTextFontSansProRegular
                android:id="@+id/preferredHsptlTxt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rect_background_grey"
                android:hint="@string/preferred_hospital"
                android:padding="5dp"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:text="Save"
                    android:textColor="@color/white"
                    android:background="@drawable/event_spinner_bg"
                    android:layout_marginRight="10dp"/>
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
    <com.mobatia.bskl.manager.ButtonFontSansProRegular
        android:id="@+id/submitBtnasdas"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:visibility="gone"
        android:background="@drawable/rect_data_collection_blue"
        android:layout_alignParentBottom="true"
        android:text="Submit"/>
</RelativeLayout>