<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_rec_countrybg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toLeftOf="@+id/img_dismiss"
            android:layout_toStartOf="@+id/img_dismiss"
            android:text="@string/select_country"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/img_dismiss"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:alpha="0.7"
            android:background="@drawable/ccp_selectable_bg"
            android:clickable="true"
            android:padding="4dp"
            /> <!--android:src="@drawable/ic_dialog_close_dark" -->
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/rl_title"
        android:background="@color/white"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/rl_query_holder"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
      >

        <EditText
            android:id="@+id/editText_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
android:background="@drawable/rounded_rec_bordergrey"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:textColorHint="@color/grey"
            android:layout_alignParentTop="true"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/img_clear_query"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:alpha="0.7"
            android:visibility="visible"
            android:background="@drawable/ccp_selectable_bg"
            android:clickable="true"
            android:padding="10dp"
            android:src="@drawable/ic_backspace_black_24dp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_countryDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_query_holder"
        android:dividerHeight="2dp" />

    <com.futuremind.recyclerviewfastscroll.FastScroller
        android:id="@+id/fastscroll"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/recycler_countryDialog"
        android:layout_alignEnd="@+id/recycler_countryDialog"
        android:layout_alignRight="@+id/recycler_countryDialog"
        android:layout_alignTop="@+id/recycler_countryDialog"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/textView_noresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_query_holder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/no_result_found"
        android:textColor="@android:color/primary_text_light"
        android:visibility="gone" />
    </RelativeLayout>
</RelativeLayout>
